<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="Share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="back_button_content_desc">back button</string>
    <string name="share_button_content_desc">share button</string>
    <string name="contact_support_content_desc">contact support</string>
    <string name="license_agreement_content_desc">license agreement</string>
    <string name="offer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="clear_text">clear Text</string>
    <string name="message_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_to_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="format_track_description">%1$s • %2$s</string>
    <string name="go_to_track_content_desc">go to track</string>
    <string name="album_cover_content_desc">album cover</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="сonnection_problem">Проблема со связью</string>
    <string name="upload_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="default_track_duration">0:30</string>
    <string name="music">Медиатека</string>
    <string name="emptyFavorites">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали\nни одного плейлиста</string>
    <string name="favorites_track">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="editTitle">Редактировать</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_positive_button">Завершить</string>
    <string name="dialog_neutral_button">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="empty_recycler">В этом плейлисте\nнет треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="track_info_format">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист %1$s?</string>
    <string name="toast_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="address_of_the_recipient">mailto:annaparfenova@example.com</string>


    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
</resources>
