<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/do_you_want_to_delete_track" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:lineHeight="16sp"
            android:padding="10dp"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@color/sky_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:lineHeight="16sp"
            android:padding="10dp"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@color/sky_blue"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>