<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        tools:context=".settings.ui.SettingsActivity" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:autofillHints=""
            android:background="@drawable/x_base_search"
            android:backgroundTint="?attr/colorOnBackground"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="4dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="14dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textCursorDrawable="@drawable/search_text_cursor" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="14dp"
            android:background="@color/transparent"
            android:contentDescription="@string/clear_text"
            android:src="@drawable/ic_close_24"
            android:visibility="gone"
            app:tint="?attr/colorSecondaryVariant"
            tools:visibility="visible" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/historyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_history"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/clearHistoryButton"
            app:layout_constraintTop_toBottomOf="@id/historyTitle"
            tools:itemCount="3"
            tools:listitem="@layout/item_search" />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/ButtonClearHistoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/clear_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:itemCount="2"
        tools:listitem="@layout/item_search"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/emptyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_empty_tracklist" />

        <TextView
            android:id="@+id/emptyMessage"
            style="@style/SearchMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="16dp"
            android:text="@string/nothing_found" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_error_no_internet" />

        <TextView
            android:id="@+id/errorMessage"
            style="@style/SearchMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="16dp"
            android:text="@string/сonnection_problem" />

        <TextView
            android:id="@+id/errorMessageDescription"
            style="@style/SearchMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"
            android:text="@string/upload_failed" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0.01"
            android:text="@string/retry"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:cornerRadius="54dp"
            app:textAllCaps="false" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/sky_blue"
            android:visibility="visible" />
    </FrameLayout>

</LinearLayout>