<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".playlist.ui.CreatePlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/playlistCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/newPlaylist" />

    <ImageView
        android:id="@+id/playlistCover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="25dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/rectangle_shape"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/coverPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_playlist_cover"
        app:layout_constraintBottom_toBottomOf="@id/playlistCover"
        app:layout_constraintEnd_toEndOf="@id/playlistCover"
        app:layout_constraintStart_toStartOf="@id/playlistCover"
        app:layout_constraintTop_toTopOf="@id/playlistCover" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/unfocused_edit_tex_playllist"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLength="30"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistCover" />

    <TextView
        android:id="@+id/nameText"
        style="@style/CreateNewFragmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-10dp"
        android:paddingHorizontal="6dp"
        android:text="@string/name_hint"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText" />


    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/unfocused_edit_tex_playllist"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/description_hint"
        android:inputType="text"
        android:maxLength="30"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <TextView
        android:id="@+id/descriptionText"
        style="@style/CreateNewFragmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-10dp"
        android:paddingHorizontal="6dp"
        android:text="@string/description_hint"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/descriptionEditText"
        app:layout_constraintStart_toStartOf="@id/descriptionEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/selector_create_button"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>