<?xml version="1.0" encoding="utf-8"?>


 <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/audioPlayerConteiner"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/trackCover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <ImageView
            android:id="@+id/trackCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/ic_placeholder_312" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/colorOnPrimary"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/trackArtist"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/trackCover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/trackArtist"
            style="@style/TrackNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/addToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/ic_add_to_playlist"
            app:layout_constraintBottom_toTopOf="@id/timesForTrack"
            app:layout_constraintEnd_toStartOf="@id/playback_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <ImageButton
            android:id="@+id/playback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_button_play"
            app:layout_constraintBottom_toTopOf="@id/timesForTrack"
            app:layout_constraintEnd_toStartOf="@id/addToFavorites"
            app:layout_constraintStart_toEndOf="@id/addToPlaylist"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <ImageButton
            android:id="@+id/addToFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/ic_add_to_favorites"
            app:layout_constraintBottom_toTopOf="@id/timesForTrack"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/playback_button"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/timesForTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/default_track_duration"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/playback_button" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="toolbar, trackCover,track_name, trackArtist " />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="trackTimeMills" />

        <TextView
            android:id="@+id/trackTimeMills"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/collectionName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timesForTrack" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@id/releaseDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackTimeMills" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/release_date"
            app:layout_constraintBottom_toTopOf="@id/genreName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collectionName" />

        <TextView
            android:id="@+id/genreName"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/genre_name"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/releaseDate" />

        <TextView
            android:id="@+id/country"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreName" />

        <TextView
            android:id="@+id/trackTime"
            style="@style/track_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/trackTimeMills"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timesForTrack"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album"
            style="@style/track_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@id/trackYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/trackYear"
            style="@style/track_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/releaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreTrack"
            style="@style/track_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/genreName"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="rock" />

        <TextView
            android:id="@+id/countryTrack"
            style="@style/track_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/country"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Великобритания" />

         </androidx.constraintlayout.widget.ConstraintLayout>

        <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

         <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <TextView
            android:id="@+id/addPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/add_to_playlist"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/newPlaylistButton"
            style="@style/ButtonClearHistoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/newPlaylist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistyRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            tools:itemCount="3"
            tools:listitem="@layout/item_audioplayer_playlist" />

           </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
